# synthesis

./: .gitignore  CMakeLists.txt  README.md
examples/arithmetic/: CMakeLists.txt  main.cpp
include/program_synthesis/: expression.h  synthesizer.h
src/: synthesizer.cpp
